<resources>
    <string name="app_name">AppSansT</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Bienvenue !</string>
    <string name="welcome_entrainement">Bienvenue sur la page d\'Entrainement !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_home"/>
    <string name="repas_button_text">Repas</string>
    <string name="entrainement_button_text">Entraînement</string>
    <string name="title_activity_entrainement">Entraînement</string>
    <string name="poids_button_text">Poids</string>
    <string name="objectifs_button_text">Objectifs</string>
    <string name="title_activity_poids">Poids</string>
    <string name="title_activity_objectifs">Objectifs</string>
    <string name="title_activity_repas">Repas</string>
    <string name="accueil">Accueil</string>
    <string name="profil">Profil</string>
    <string name="param_tres">Paramètres</string>
    <string name="repas">Repas</string>
    <string name="poids">Poids</string>
    <string name="objectifs">Objectifs</string>
    <string name="entra_nement">Entraînement</string>
    <string name="open_menu">Ouvrir le menu de navigation</string>
    <string name="open_user_account">Ouvrir le compte utilisateur</string>
</resources>
